bai tap tao form dang ky

--- a/BtB.html
+++ b/BtB.html
@@ -7,14 +7,18 @@
     <title>Document</title>
     <style>
         form{
+            width: 350px;
+            padding: 5px;
             background-color: orange;
 
         }
         h2{
+            text-align: center;
             background-color: palegreen;
         }
         .trai{
             color: blue;
+            
         }
     </style>
 </head>
