--- a/BTlambancovua.html
+++ b/BTlambancovua.html
@@ -8,12 +8,26 @@
     <style>
         table{
             background-color: orange;
+            border-collapse: collapse;
         }
+       
     </style>
 </head>
 <body>
     <table> 
+        <tr align="center" style="height: 30px;">
+            <td></td>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+            <td>4</td>
+            <td>5</td>
+            <td>6</td>
+            <td>7</td>
+            <td>8</td>
+        </tr>
         <tr>
+            <td>A</td>
             <td style="background-color: white; width: 30px; height: 30px;"></td>
             <td style="background-color: black; width: 30px; height: 30px;"></td>
             <td style="background-color: white; width: 30px; height: 30px;"></td>
@@ -25,29 +39,7 @@
 
         </tr>
         <tr>
-            <td style="background-color: black; width: 30px; height: 30px;"></td>
-            <td style="background-color: white; width: 30px; height: 30px;"></td>
-            <td style="background-color: black; width: 30px; height: 30px;"></td>
-            <td style="background-color: white; width: 30px; height: 30px;"></td>
-            <td style="background-color: black; width: 30px; height: 30px;"></td>
-            <td style="background-color: white; width: 30px; height: 30px;"></td>
-            <td style="background-color: black; width: 30px; height: 30px;"></td>
-            <td style="background-color: white; width: 30px; height: 30px;"></td>
-
-
-        </tr>
-        <tr>
-            <td style="background-color: white; width: 30px; height: 30px;"></td>
-            <td style="background-color: black; width: 30px; height: 30px;"></td>
-            <td style="background-color: white; width: 30px; height: 30px;"></td>
-            <td style="background-color: black; width: 30px; height: 30px;"></td>
-            <td style="background-color: white; width: 30px; height: 30px;"></td>
-            <td style="background-color: black; width: 30px; height: 30px;"></td>
-            <td style="background-color: white; width: 30px; height: 30px;"></td>
-            <td style="background-color: black; width: 30px; height: 30px;"></td>
-
-        </tr>
-        <tr>
+            <td>B</td>
             <td style="background-color: black; width: 30px; height: 30px;"></td>
             <td style="background-color: white; width: 30px; height: 30px;"></td>
             <td style="background-color: black; width: 30px; height: 30px;"></td>
@@ -60,6 +52,7 @@
 
         </tr>
         <tr>
+            <td>C</td>
             <td style="background-color: white; width: 30px; height: 30px;"></td>
             <td style="background-color: black; width: 30px; height: 30px;"></td>
             <td style="background-color: white; width: 30px; height: 30px;"></td>
@@ -71,6 +64,7 @@
 
         </tr>
         <tr>
+            <td>D</td>
             <td style="background-color: black; width: 30px; height: 30px;"></td>
             <td style="background-color: white; width: 30px; height: 30px;"></td>
             <td style="background-color: black; width: 30px; height: 30px;"></td>
@@ -83,6 +77,7 @@
 
         </tr>
         <tr>
+            <td>E</td>
             <td style="background-color: white; width: 30px; height: 30px;"></td>
             <td style="background-color: black; width: 30px; height: 30px;"></td>
             <td style="background-color: white; width: 30px; height: 30px;"></td>
@@ -94,6 +89,7 @@
 
         </tr>
         <tr>
+            <td>F</td>
             <td style="background-color: black; width: 30px; height: 30px;"></td>
             <td style="background-color: white; width: 30px; height: 30px;"></td>
             <td style="background-color: black; width: 30px; height: 30px;"></td>
@@ -103,6 +99,36 @@
             <td style="background-color: black; width: 30px; height: 30px;"></td>
             <td style="background-color: white; width: 30px; height: 30px;"></td>
 
+
+        </tr>
+        <tr>
+            <td>G</td>
+            <td style="background-color: white; width: 30px; height: 30px;"></td>
+            <td style="background-color: black; width: 30px; height: 30px;"></td>
+            <td style="background-color: white; width: 30px; height: 30px;"></td>
+            <td style="background-color: black; width: 30px; height: 30px;"></td>
+            <td style="background-color: white; width: 30px; height: 30px;"></td>
+            <td style="background-color: black; width: 30px; height: 30px;"></td>
+            <td style="background-color: white; width: 30px; height: 30px;"></td>
+            <td style="background-color: black; width: 30px; height: 30px;"></td>
+
+        </tr>
+        <tr>
+            <td>H</td>
+            <td style="background-color: black; width: 30px; height: 30px;"></td>
+            <td style="background-color: white; width: 30px; height: 30px;"></td>
+            <td style="background-color: black; width: 30px; height: 30px;"></td>
+            <td style="background-color: white; width: 30px; height: 30px;"></td>
+            <td style="background-color: black; width: 30px; height: 30px;"></td>
+            <td style="background-color: white; width: 30px; height: 30px;"></td>
+            <td style="background-color: black; width: 30px; height: 30px;"></td>
+            <td style="background-color: white; width: 30px; height: 30px;"></td>
+            <td></td>
+
+
+        </tr>
+        <td></td>
+        <tr>
 
         </tr>
 
